Fix profile button. Links users to their Rodgort user page

--- a/Rodgort/ClientApp/src/app/app.component.html
+++ b/Rodgort/ClientApp/src/app/app.component.html
@@ -17,7 +17,7 @@
                       {{userName}}
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                      <button routerLink="/profile" class="dropdown-item button">Profile</button>
+                      <a routerLink="/profile" class="dropdown-item button">Profile</a>
                       <div class="dropdown-divider"></div>
                       <button (click)="onLogoutClicked()" class="dropdown-item button">
                           Log out
