--- a/Rodgort/ClientApp/src/app/user/user.component.html
+++ b/Rodgort/ClientApp/src/app/user/user.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="userData" class="container">
 
   <p class="h1">{{userData.displayName}}</p>
+  <p class="lead"><a href="https://stackoverflow.com/users/{{userData.userId}}">View on site</a></p>
+
   <hr />
 
   <p class="h2">Burninations</p>
