Track moderator status. Fix up a few links

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -45,6 +45,7 @@
         <h2>Administration</h2>
         <ul>
             <li><a routerLink="/logs" [queryParams]="{level:'Info'}">Logs</a></li>
+            <li><a routerLink="/tag-tracking-status-audits">Tag Tracking Status Audits</a></li>
             <li><a href="/Hangfire">Hangfire</a></li>
             <li><a href="/manual-question-processing">Manual Question Processing</a></li>
             <li><a href="/unknown-deletion-resolution">Unknown deletion resolution
