--- a/Rodgort/ClientApp/src/app/progress/progress.component.html
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.html
@@ -42,7 +42,7 @@
             <tbody>
               <tr *ngFor="let row of tag.userGrandTotals | sortAscending: 'total'; let i=index">
                 <ng-container *ngIf="tag.userGrandTotalShowAll || i < 10">
-                  <td><a routerLink="/user/{{row.userId}}">{{row.userName}}</a></td>
+                  <td><a routerLink="/user/{{row.userId}}">{{row.userName}} {{row.isModerator ? '♦' : ''}}</a></td>
                   <td>{{row.total}}</td>
                 </ng-container>
               </tr>
@@ -66,7 +66,7 @@
             <tbody>
               <tr *ngFor="let row of tag.userTotals | sortAscending: 'total'; let i=index">
                 <ng-container *ngIf="tag.userBreakdownShowAll || i < 10">
-                  <td><a routerLink="/user/{{row.userId}}">{{row.userName}}</a></td>
+                  <td><a routerLink="/user/{{row.userId}}">{{row.userName}} {{row.isModerator ? '♦' : ''}}</a></td>
                   <td>{{row.type}}</td>
                   <td>{{row.total}}</td>
                 </ng-container>
