--- a/Rodgort/ClientApp/src/app/requests/requests.component.scss
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.scss
@@ -1,4 +1,4 @@
-.post-tag, .post-metatag, .post-statustag, .tag-tracked, .tag-pending, .tag-ignored {
+.post-metatag, .post-statustag {
     display: inline-block;
 
     padding: .4em .5em;
@@ -21,31 +21,8 @@
     word-wrap: break-word;
 }
 
-@media(max-width: 588px) {
-    .post-tag, .tag-pending {
-        font-size: 10px;
-    }
-}
-
-@media(max-width: 515px) {
-    .post-tag, .tag-pending {
-        font-size: 9px;
-    }
-}
-
 table {
     font-size: 12px;
-}
-
-.post-tag {
-    background-color: #ececec;
-    border-color: #ececec;
-}
-.post-tag > a {
-    color: #212529;
-}
-.post-tag > a:hover {
-    text-decoration: none;
 }
 
 .post-metatag {
@@ -77,21 +54,6 @@ table {
     font-size: 17px;
     color: #848d95;
     padding: 7px 6px;
-}
-
-.tag-ignored {
-    border:none;
-    background-color: #f1c0c0;
-}
-
-.tag-tracked {
-    border:none;
-    background-color: #a8f1a8;
-}
-
-.tag-pending {
-    border:none;
-    background-color: #f3bb84;
 }
 
 .row {
