--- a/Rodgort/ClientApp/src/app/tag-tracking-status-audits/tag-tracking-status-audits.component.html
+++ b/Rodgort/ClientApp/src/app/tag-tracking-status-audits/tag-tracking-status-audits.component.html
@@ -20,9 +20,9 @@
       <td title="{{audit.timeChanged}}">{{audit.localTime}}</td>
       <td><a routerLink="/user/{{audit.userId}}">{{audit.userName}} {{audit.isModerator ? '♦' : ''}}</a></td>
       <td><a href="https://meta.stackoverflow.com/q/{{audit.metaQuestionId}}">{{audit.metaQuestionTitle}}</a></td> 
-      <td>{{audit.tag}}</td> 
-      <td>{{audit.previousStatus}}</td> 
-      <td>{{audit.newStatus}}</td> 
+      <td><app-tag-bubble [tag]="audit.tag"></app-tag-bubble></td> 
+      <td><app-tracking-status-bubble [trackingStatusName]="audit.previousStatus" [trackingStatusId]="audit.previousStatusId"></app-tracking-status-bubble></td> 
+      <td><app-tracking-status-bubble [trackingStatusName]="audit.newStatus" [trackingStatusId]="audit.newStatusId"></app-tracking-status-bubble></td> 
     </tr>
   </tbody>
 </table>
