--- a/Rodgort/ClientApp/src/app/tag-tracking-status-audits/tag-tracking-status-audits.component.html
+++ b/Rodgort/ClientApp/src/app/tag-tracking-status-audits/tag-tracking-status-audits.component.html
@@ -4,7 +4,7 @@
   <button type="submit" class="btn btn-primary mt-2 mt-sm-2 mr-sm-2 mb-sm-0" (click)="applyFilter()">Search</button>
 </form>
 
-<app-pagination [pagingInfo]="pagingInfo" (pageClicked)="loadPage($event)">
+<app-pagination style="display: block" class="mt-3" [pagingInfo]="pagingInfo" (pageClicked)="loadPage($event)">
 </app-pagination>
 
 <table *ngIf="audits" class="table log-table mt-3 mb-3">
