Add totals count to user page

--- a/Rodgort/ClientApp/src/app/user/user.component.html
+++ b/Rodgort/ClientApp/src/app/user/user.component.html
@@ -22,6 +22,11 @@
         <td><a routerLink="/progress" [queryParams]="{metaQuestionId: burn.metaQuestionId}">{{burn.metaQuestionTitle}}</a></td>
         <td>{{burn.numActions}} actions</td>
       </tr>
+      <tr>
+          <td></td>
+          <td></td>
+          <td><b>{{userData.totalActions}} total actions</b></td>
+        </tr>
     </tbody>
   </table>
 
