Replace toaster for new deploys with angular2-toaster

--- a/Rodgort/ClientApp/src/styles.scss
+++ b/Rodgort/ClientApp/src/styles.scss
@@ -1,4 +1,5 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import 'node_modules/angular2-toaster/src/toaster';
 
 body {
     position: relative;
@@ -17,3 +18,11 @@ body {
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.toast-message a.deploy-link {
+    font-weight: bold;
+    text-decoration: underline;
+}
+#toast-container > div.toast {
+    opacity: 1;
+}
