--- a/Rodgort/ClientApp/src/app/app.component.html
+++ b/Rodgort/ClientApp/src/app/app.component.html
@@ -1,48 +1,51 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-light bg-faded">
-      <a class="navbar-brand navbar-logo" routerLink="/">Rodgort</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-          </ul>
+    <nav class="navbar navbar-expand-md navbar-light bg-faded">
+        <a class="navbar-brand navbar-logo" routerLink="/">Rodgort</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+            </ul>
 
-          <div class="quota-display">Quota Remaining: {{quotaRemaining}}</div>
-          <a *ngIf="!isLoggedIn" class="btn btn-outline-success my-2 my-sm-0" href="{{getLoginUrl()}}">Log In</a>
-          <ul *ngIf="isLoggedIn" class="navbar-nav mt-2 mt-sm-0">
-              <li class="nav-item dropdown hidden-md-down">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      {{userName}}
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                      <a routerLink="/profile" class="dropdown-item button">Profile</a>
-                      <div class="dropdown-divider"></div>
-                      <button (click)="onLogoutClicked()" class="dropdown-item button">
-                          Log out
-                      </button>
-                  </div>
-              </li>
-          </ul>
-      </div>
-  </nav>
+            <div class="quota-display">Quota Remaining: {{quotaRemaining}}</div>
+            <a *ngIf="!isLoggedIn" class="btn btn-outline-success my-2 my-sm-0" href="{{getLoginUrl()}}">Log In</a>
+            <ul *ngIf="isLoggedIn" class="navbar-nav mt-2 mt-sm-0">
+                <li class="nav-item dropdown hidden-md-down">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        {{userName}}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                        <a routerLink="/profile" class="dropdown-item button">Profile</a>
+                        <div class="dropdown-divider"></div>
+                        <button (click)="onLogoutClicked()" class="dropdown-item button">
+                            Log out
+                        </button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </header>
 
 <main role="main" class="container">
-  <router-outlet></router-outlet>
+    <toaster-container></toaster-container>
+    <router-outlet></router-outlet>
 </main>
 
 <footer class="footer">
-  <div class="container">
-      <span class="text-muted">
-          Made by the
-          <a href="https://sobotics.org/">SOBotics</a> team. Source code on
-          <a href="https://gitlab.com/rjrudman/StackExchangeChat">GitLab</a>. Content provided by
-          <a href="https://api.stackexchange.com/">Stack Exchange API</a>
-          under the
-          <a href="https://creativecommons.org/licenses/by-sa/3.0/"> CC BY-SA 3.0 license.</a>
-          <a *ngIf="revision" href="https://gitlab.com/rjrudman/Rodgort/commit/{{revision}}">{{revision | slice:0:6}}</a>
-      </span>
-  </div>
+    <div class="container">
+        <span class="text-muted">
+            Made by the
+            <a href="https://sobotics.org/">SOBotics</a> team. Source code on
+            <a href="https://gitlab.com/rjrudman/StackExchangeChat">GitLab</a>. Content provided by
+            <a href="https://api.stackexchange.com/">Stack Exchange API</a>
+            under the
+            <a href="https://creativecommons.org/licenses/by-sa/3.0/"> CC BY-SA 3.0 license.</a>
+            <a *ngIf="revision"
+                href="https://gitlab.com/rjrudman/Rodgort/commit/{{revision}}">{{revision | slice:0:6}}</a>
+        </span>
+    </div>
 </footer>
