Add zombie overview

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -37,6 +37,7 @@
             <li>{{statistics.tags.hasQuestionsAndAttachedToCompletedRequest}} have questions despite being found on
                 a
                 status-completed request</li>
+            <li><a routerLink="/zombies"> {{statistics.tags.zombieCount}} need a double tap</a></li>
         </ul>
     </ul>
 
