Properly explain 'double tap'. Only show alive tags on the home page

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -42,7 +42,7 @@
             <li>{{statistics.tags.hasQuestionsAndAttachedToCompletedRequest}} have questions despite being found on
                 a
                 status-completed request</li>
-            <li><a routerLink="/zombies"> {{statistics.tags.zombieCount}} need a double tap</a></li>
+            <li><a routerLink="/zombies">{{statistics.tags.zombieCount}} currently alive tags have re-appeared after removal</a></li>
         </ul>
     </ul>
     <ul>
