Add duration column for burns

--- a/Rodgort/ClientApp/src/app/tracked-burns/tracked-burns.component.html
+++ b/Rodgort/ClientApp/src/app/tracked-burns/tracked-burns.component.html
@@ -13,6 +13,7 @@
         <th>Tag(s)</th>
         <th>Burn started</th>
         <th>Burn ended</th>
+        <th>Duration</th>
       </tr>
     </thead>
     <tbody>
@@ -27,6 +28,9 @@
         </td>
         <td title={{burn.burnEnded}}>
           {{burn.burnEndedLocal}}
+        </td>
+        <td>
+          {{burn.duration}}
         </td>
       </tr>
     </tbody>
