--- a/Rodgort/ClientApp/src/app/user/user.component.html
+++ b/Rodgort/ClientApp/src/app/user/user.component.html
@@ -57,7 +57,7 @@
   </table>
 
   <form *ngIf="isAdmin" class="form-inline" #filterForm="ngForm">
-      <div class="input-group mt-2 mt-sm-2 mr-sm-2 mb-sm-0">
+      <div class="input-group mt-2 mb-2 mt-sm-2 mr-sm-2">
         <div class="input-group-prepend">
           <label class="input-group-text" for="roleSelector">Add Role</label>
         </div>
