--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -147,7 +147,8 @@
                                     <span *ngIf="tag.trackingStatusId !== tagTrackingStatus.TRACKED && tag.trackingStatusId !== tagTrackingStatus.IGNORED">|</span>
                                     <a *ngIf="tag.trackingStatusId !== tagTrackingStatus.IGNORED" href="javascript:void(0)"
                                         (click)="setTagTrackingStatus(question.id, tag, false)">Ignore</a>
-                                    <a *ngIf="tag.trackingStatusId === tagTrackingStatus.TRACKED || tag.trackingStatusId === tagTrackingStatus.IGNORED" class="pull-right" routerLink="/tag-tracking-status-audits" [queryParams]="{tag: tag.tagName, metaQuestionId: question.id}">Audit</a>
+                                    <span class="audit-link-spacer">|</span>
+                                    <a *ngIf="tag.trackingStatusId === tagTrackingStatus.TRACKED || tag.trackingStatusId === tagTrackingStatus.IGNORED" class="audit-link" routerLink="/tag-tracking-status-audits" [queryParams]="{tag: tag.tagName, metaQuestionId: question.id}">Audit</a>
                                 </td>
                             </tr>
                             <tr *ngIf="tag.showingMore && tag.questionCountOverTime">
