Fix alignment for adding roles

--- a/Rodgort/ClientApp/src/app/user/user.component.html
+++ b/Rodgort/ClientApp/src/app/user/user.component.html
@@ -56,8 +56,8 @@
     </tbody>
   </table>
 
-  <form *ngIf="isAdmin" class="form-inline" #filterForm="ngForm">
-      <div class="input-group mt-2 mb-2 mt-sm-2 mr-sm-2">
+  <form *ngIf="isAdmin" class="form-inline mt-2 mb-2 mt-sm-2 mr-sm-2" #filterForm="ngForm">
+      <div class="input-group">
         <div class="input-group-prepend">
           <label class="input-group-text" for="roleSelector">Add Role</label>
         </div>
