Actually fix role adding positioning

--- a/Rodgort/ClientApp/src/app/user/user.component.html
+++ b/Rodgort/ClientApp/src/app/user/user.component.html
@@ -66,7 +66,7 @@
           <option *ngFor="let availableRole of userData.availableRoles" value="{{availableRole.id}}">{{availableRole.name}}</option>
         </select>
       </div>
-      <button type="submit" [attr.disabled]="!selectedRole ? '' : null" class="btn btn-primary mt-2 mt-sm-2 mr-sm-2 mb-sm-0" (click)="addRole()">Add</button>
+      <button type="submit" [attr.disabled]="!selectedRole ? '' : null" class="btn btn-primary mt-2 ml-sm-2 mt-sm-0" (click)="addRole()">Add</button>
     </form>
     
 </div>
